--- a/.env.example
+++ b/.env.example
@@ -29,13 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=distancelearning237@gmail.com
+MAIL_PASSWORD=rawkpyhpkhgbqckk
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=admin@distancelearning.org
+MAIL_FROM_NAME="Distance Learning 237"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
