--- a/.env.example
+++ b/.env.example
@@ -31,11 +31,11 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
-MAIL_USERNAME=distancelearning237@gmail.com
-MAIL_PASSWORD=rawkpyhpkhgbqckk
+MAIL_USERNAME=smartlearning237@gmail.com
+MAIL_PASSWORD=qfpxkgoxiwfrqtaf
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=admin@distancelearning.org
-MAIL_FROM_NAME="Distance Learning 237"
+MAIL_FROM_ADDRESS=admin@smartlearning237.org
+MAIL_FROM_NAME="Smart Learning 237"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
