--- a/.env.example
+++ b/.env.example
@@ -31,8 +31,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
-MAIL_USERNAME=smartlearning237@gmail.com
-MAIL_PASSWORD=qfpxkgoxiwfrqtaf
+MAIL_USERNAME==******************
+MAIL_PASSWORD=******************
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=admin@smartlearning237.org
 MAIL_FROM_NAME="Smart Learning 237"
